--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ header > .container{
 	color: #303134;
 }
 
+li>a{
+	color: #303134
+}
+
 
 /*section s-1*/
 
@@ -112,7 +116,7 @@ header > .container{
 /*section s-2*/
 
 .s-2{
-	margin-bottom: 92px;
+	margin-bottom: 52px;
 }
 
 
@@ -254,3 +258,37 @@ header > .container{
 	left: -49px;
 
 }
+
+/*footer*/
+
+footer{
+	width: 100%;
+	height: 150px;
+	background-color: gray;
+}
+
+footer>.container{
+
+	width: 1172px;
+	height: 150px;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+
+	justify-content: flex-end ;
+}
+
+.fa-square-instagram{
+	font-size: 70px;
+}
+
+.fa-facebook{
+	font-size: 70px;
+	margin-right: 20px;
+	margin-left: 20px;
+}
+
+.fa-facebook-messenger{
+	font-size: 70px;
+}
+
